--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start -p $PORT"
+}
   },
   "dependencies": {
     "next": "16.1.6",
